--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "dependencies": {
-    "json-server": "^0.17.3"
-  },
-  "name": "revision-json-server",
+  "name": "backend",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --w db.json"
+    "server1": "json-server --watch db.json",
+    "server": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "cors": "^2.8.5",
+    "json-server": "^0.17.3",
+    "nodemon": "^2.0.22"
+  }
 }
